added little flag thing in top_menu

--- a/src/main/webapp/css/blue.css
+++ b/src/main/webapp/css/blue.css
@@ -44,3 +44,14 @@ h3 {
 a {
 	color: #F5FFBF;
 }
+
+#top_menu:before {
+		  border-color: #BFD936;
+          border-left-color: transparent;
+          border-bottom-color: transparent;
+}
+#top_menu:after {
+		  border-color: #BFD936;
+          border-right-color: transparent;
+          border-bottom-color: transparent;
+}
