--- a/src/main/webapp/css/layout.css
+++ b/src/main/webapp/css/layout.css
@@ -72,7 +72,7 @@ h3 {
 	width: 800px;
 	height: 25px;
 	margin: 0 -.5em 20px;
-	box-shadow: 0 2px 0px rgba(0, 0, 0, 0.5);
+	box-shadow: 0 0 1px rgba(0, 0, 0, 0.5);
     padding: 0 .5em 0 .5em;	
     position: absolute;
 }        
