added ubuntu font only for headers

--- a/src/main/webapp/css/layout.css
+++ b/src/main/webapp/css/layout.css
@@ -5,6 +5,8 @@
 
 h1,h2,h3,h4,h5,h6 {
 	font-weight: normal;
+	font-family: Ubuntu, "Helvetica", "Arial", sans-serif;	
+	text-shadow: 1px 1px 0px rgba(255, 255, 255, 0.196);
 }/* top left bottom right */
 /* resets margins for elements such as headings, lists and paragraphs */
 
