--- a/src/main/webapp/css/blue.css
+++ b/src/main/webapp/css/blue.css
@@ -23,10 +23,10 @@ nav li a {
   color: #64006B;
   text-decoration: none;
 }
-#home li.home, #news li.news, #forms li.forms, #ajax li.ajax {
+#home li.home, #news li.news, #artists li.artists, #contribute li.contribute, #requests li.requests, #community li.community a{
   background-color: #BFD936;
 }
-#home li.home a, #news li.news a, #forms li.forms a, #ajax li.ajax a {
+#home li.home a, #news li.news a, #artists li.artists a, #contribute li.contribute a, #requests li.requests a, #community li.community a {
   color: #F5FFBF;
   font-weight: bold;
 }
