--- a/src/main/webapp/css/layout.css
+++ b/src/main/webapp/css/layout.css
@@ -37,34 +37,36 @@ body {
   font-family: "Helvetica", "Arial", sans-serif;  
   line-height: 160%;  
   overflow-y: scroll; 
+  
 }
 
 section {
   width: 800px;
   margin: auto;
   padding: 0; 
+  background-color: #609EBF;
   float: left;
   box-shadow: 0px 0px 20px #aaa;
   -moz-box-shadow: 5px 5px 50px #aaa;
   -webkit-box-shadow:5px 5px 50px #aaa; 
+  
 }
 
-nav {
+#mainNav {
   width: 800px;
   height: 25px;
-  margin: 0 -.5em 20px;
+  margin: 0 -.5em 0px;
   padding: 0 .5em 0 .5em;   
-  position: absolute;
   font-family: Ubuntu, "Helvetica", "Arial", sans-serif;    
   box-shadow: 0 0 1px rgba(0, 0, 0, 0.5);
 }        
 
-nav li:first-child, nav li:first-child:hover {
+#mainNav li:first-child, #mainNav li:first-child:hover {
   margin-left: -.5em;
   padding-left: .5em;
 }
 
-nav:before, nav:after {
+#mainNav:before, #mainNav:after {
   content: '';          
   position: absolute;
   bottom: -1em;
@@ -73,24 +75,24 @@ nav:before, nav:after {
   border-bottom-color: transparent;
 }
 
-nav:before {
+#mainNav:before {
   left: 0;
   border-left-color: transparent; 
 }
 
-nav:after {
+#mainNav:after {
   right: 0; 
   border-right-color: transparent;  
 }
 
-nav ul {
+#mainNav ul {
   list-style: none;
   margin-left: -10px;
   font-size: 0;
   padding: 0;
   margin: 0;
 }
-nav li {
+#mainNav li {
   font-size: 16px;
   display: inline-block;
   border: none;
@@ -98,7 +100,7 @@ nav li {
   text-align: center;
   font-weight: normal;  
 }
-nav li a {
+#mainNav li a {
   display: block;
   width: 100%;
   height: 100%;
@@ -140,7 +142,6 @@ section article a {
 }
 
 section article { 
-  padding: 40px 15px 15px 25px; 
   text-align: justify;
 }
 
