--- a/src/main/webapp/css/blue.css
+++ b/src/main/webapp/css/blue.css
@@ -7,10 +7,10 @@ h1 {
   color: #F5FFBF;
 }
 h2 {
-  color: #FFFCE6;
+  color: #FFFFBF;
 }
 h3 {
-  color: #FFFCE6; 
+  color: #FFFFBF; 
 }
 section article, header, footer, aside {
   background-color: #609EBF;  
