--- a/src/main/webapp/css/layout.css
+++ b/src/main/webapp/css/layout.css
@@ -145,7 +145,7 @@ article ol li:nth-child(odd) {
 }
 
 article {
-  padding: 15px 0px 0px 15px;
+  padding: 15px 15px 15px 25px;
 }
 
 
@@ -309,4 +309,10 @@ input[type=submit] {
   padding-right: 15px;
   padding-top: 15px;
   padding-bottom: 0;
+}
+
+#wrapper article {
+  padding-right: 0px;
+  padding-left: 15px;
+  padding-bottom: 0px;
 }
