--- a/src/main/webapp/css/layout.css
+++ b/src/main/webapp/css/layout.css
@@ -45,7 +45,7 @@ body {
   /* added background */
   background-image: url("../images/bg.jpg"); 
   background-size: 100%;  
-  background-repeat: none;
+  background-repeat: no-repeat;
 }
 
 section {
