background and transparency

--- a/src/main/webapp/css/layout.css
+++ b/src/main/webapp/css/layout.css
@@ -46,6 +46,7 @@ body {
   background-image: url("../images/bg.jpg"); 
   background-size: 100%;  
   background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 section {
