--- a/src/main/webapp/css/admin.css
+++ b/src/main/webapp/css/admin.css
@@ -27,7 +27,7 @@
   /*fallback color */
   background-color: #EBFF80;
   display: block;
-  font-family: "Ubuntu";
+  font-family: Helvetica, Arial;
   border-radius: 5px;
   color: black;
   text-shadow: white 1px 1px 2px;
