--- a/src/main/webapp/css/admin.css
+++ b/src/main/webapp/css/admin.css
@@ -1,6 +1,7 @@
 #adminContainer {
   padding: 0;
-  margin: 0;  
+  margin: 0;
+  min-height: 500px;  
 }
 
 #adminNav {
@@ -88,6 +89,7 @@
 
 #adminBody fieldset {
   padding-left: 15px;
+  margin-top: solid 1px white;
 }
 
 #adminBody fieldset legend {
@@ -111,6 +113,7 @@
 
 #adminBody fieldset legend {
   margin-left: -15px;
+  
 }
 
 #fTracks input:nth-child(1) {
