album upload ajax cover image

--- a/src/main/webapp/css/admin.css
+++ b/src/main/webapp/css/admin.css
@@ -200,3 +200,10 @@
   overflow: hidden !important;
   visibility: hidden;             
 }
+
+#adminBody #coverForm {
+	visibility: hidden;
+	width: 0;
+	margin: 0;
+	padding: 0;
+}
