album upload ajax cover image

--- a/src/main/webapp/css/admin.css
+++ b/src/main/webapp/css/admin.css
@@ -202,6 +202,10 @@
   visibility: hidden;             
 }
 
+#coverUp .loading {
+	opacity: 0.8;
+}
+
 #adminBody #coverForm {
 	visibility: hidden;
 	width: 0;
