--- a/src/main/webapp/css/admin.css
+++ b/src/main/webapp/css/admin.css
@@ -202,8 +202,8 @@
   visibility: hidden;             
 }
 
-#coverUploadButton .loading {
-	opacity: 0.8;
+.loading {
+	opacity: 0.5;
 }
 
 #adminBody #coverForm {
