finished ajax tracks, adding dropdown dates

--- a/src/main/webapp/css/admin.css
+++ b/src/main/webapp/css/admin.css
@@ -140,14 +140,15 @@
 #fAlbum select {
   background-color: #A3C6D9;
   color: #fff;
-  width: 190px;
   border: none;
   padding: 5px;
 }
 
-#fAlbum #date {
-  width: 180px;
-  
+#fAlbum #artist {
+  width: 190px;
+}
+#fAlbum #month {
+  width: 130px; 
 }
 
 .coverLeft {
