forEach reverse order

--- a/src/main/webapp/css/admin.css
+++ b/src/main/webapp/css/admin.css
@@ -148,7 +148,12 @@
   width: 190px;
 }
 #fAlbum #month {
-  width: 130px; 
+  width: 100px; 
+}
+
+#falbum #year {
+	width: 60px;
+	text-align: center;
 }
 
 .coverLeft {
