--- a/src/main/webapp/css/layout.css
+++ b/src/main/webapp/css/layout.css
@@ -288,7 +288,7 @@ input[type=text].required {
   
 }
 
-input:focus, textarea:focus {
+input:focus, textarea:focus, select:focus {
   color: #000;
   box-shadow: 0px 0px 10px #DFF4FF;
   -moz-box-shadow: 0px 0px 10px #DFF4FF;
