--- a/src/main/webapp/css/admin.css
+++ b/src/main/webapp/css/admin.css
@@ -108,9 +108,7 @@
 }
 
 #adminBody input[type="submit"] {
-  margin: auto;
   margin-top: 20px;
-  margin-left: 104px;  
   width: 100px;
 }
 
@@ -152,8 +150,8 @@
 }
 
 #falbum #year {
-	width: 60px;
-	text-align: center;
+  width: 60px;
+  text-align: center;
 }
 
 .coverLeft {
@@ -209,17 +207,51 @@
 }
 
 .loading {
-	opacity: 0.5;
+  opacity: 0.5;
 }
 
 #adminBody #coverForm {
-	visibility: hidden;
-	width: 0;
-	height: 0;
-	margin: 0;
-	padding: 0;
+  visibility: hidden;
+  width: 0;
+  height: 0;
+  margin: 0;
+  padding: 0;
 }
 
 .newTrack {
   opacity: 0.5;
+}
+
+#adminBody #newArtist {
+  width: 40px;
+}
+
+#closeWindow {
+  position: absolute;
+  top: -35px;
+  right: 0;
+}
+
+#artistPanel {
+  display: none;
+  position:fixed;
+  top: 20%;
+  left: 30%;
+  width:500px;
+  background:#609EBF;
+  padding:0 15px 0px 0px;
+  border:2px solid #CCCCCC;
+  z-index:2001;
+}
+
+
+#lightbox {
+  display:none;
+  background:#000;
+  opacity:0.7;
+  filter:alpha(opacity=30);
+  position:absolute;
+  top:0px;
+  left:0px;
+  z-index:2000;
 }
