--- a/src/main/webapp/css/admin.css
+++ b/src/main/webapp/css/admin.css
@@ -125,6 +125,10 @@
   width: 20px;
   text-align: center;
 }
+
+#fTracks inut:nth-child(1):disabled {
+	color: #ffffff;
+}
 #fTracks input:nth-child(2) {
   width: 425px;
 }
@@ -257,3 +261,4 @@
   left:0px;
   z-index:2000;
 }
+
