--- a/src/main/webapp/css/layout.css
+++ b/src/main/webapp/css/layout.css
@@ -277,7 +277,7 @@ form p {
   padding: 10px 0;
 }
 
-input, input.input_inactive, textarea {
+input, input.input_inactive {
   /*border: solid 2px #FFFCE6;*/
   border: none;
   background-color: #eee;
@@ -323,6 +323,7 @@ input[type=submit] {
 }
 
 #wrapper article {
+  overflow: auto;
   padding-right: 0px;
   padding-left: 15px;
   padding-bottom: 0px;
