--- a/src/main/webapp/css/layout.css
+++ b/src/main/webapp/css/layout.css
@@ -13,7 +13,7 @@ a {
 }
 
 a img {
-	border: none;
+  border: none;
 }
 
 
@@ -277,7 +277,7 @@ form p {
   padding: 10px 0;
 }
 
-input, input.input_inactive {
+input, input.input_inactive, textarea {
   /*border: solid 2px #FFFCE6;*/
   border: none;
   background-color: #eee;
@@ -289,7 +289,6 @@ input[type=text].required {
 }
 
 input:focus, textarea:focus, select:focus {
-  color: #000;
   box-shadow: 0px 0px 10px #DFF4FF;
   -moz-box-shadow: 0px 0px 10px #DFF4FF;
   -webkit-box-shadow:0px 0px 10px #DFF4FF;
