--- a/src/main/webapp/css/layout.css
+++ b/src/main/webapp/css/layout.css
@@ -139,6 +139,7 @@ article {
 }
 
 article p img {
+  
   float: right;
   margin-left: 5px;
   border: none;
@@ -339,4 +340,11 @@ aside {
 
 .clrl {
   clear: left;
+}
+
+.coverImage {
+	border: 1px solid #000000;
+  box-shadow: 4px 6px 5px 0px #566973;
+  width: 100px;
+  height: 100px;
 }
