--- a/src/main/webapp/css/layout.css
+++ b/src/main/webapp/css/layout.css
@@ -92,11 +92,12 @@ section {
   display: inline-block;
   border: none;
   width: 100px;
+  height: 25px;
   text-align: center;
   font-weight: normal;  
 }
 #mainNav li a {
-  display: block;
+  display: inline-block;
   width: 100%;
   height: 100%;
 }
