--- a/src/main/webapp/css/layout.css
+++ b/src/main/webapp/css/layout.css
@@ -48,9 +48,11 @@ body {
   overflow-y: scroll; 
   /* added background */
   background-image: url("../images/bg.jpg"); 
-  background-size: 100%;  
+  background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  background-position: center;
+
 }
 
 section {
@@ -334,11 +336,11 @@ input[type=submit] {
 
 /* added transparency */
 section {
-  opacity: 0.98;
+  /* FIXME performance opacity: 0.98; */
 }
 
 aside {
-  opacity: 0.95;
+  /* FIXME performance opacity: 0.95; */
 }
 
 .clrl {
