Commit from JBoss Tools

--- a/src/main/webapp/css/admin.css
+++ b/src/main/webapp/css/admin.css
@@ -99,7 +99,7 @@
 	color: #ffffff;
 }
 #fTracks input:nth-child(2) {
-  width: 400px;
+  width: 74%;
 }
 #fTracks input:nth-child(3) {
   width: 80px;
